--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,78 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+background-color: cornflowerblue;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+.container{
+  width: 380px;
+  margin: auto;
+  padding: 11px;
+  background-color: rgb(1, 112, 112);
+  color: yellow;
+  text-align: center;
+  margin-top: 44px;
+}
+.taskInput{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container input{
+  width: 70%;
+  padding: 9px;
+  border: none;
+  font-size: 22px;
+  border-radius: 2px;
+  color: deepskyblue;
+}
+.container button{
+  width: 70px;
+  height: 44px;
+  border: none;
+  background-color: chartreuse;
+  color: deepskyblue;
+  font-size: 20px;
+  margin-left: 6px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.taskData{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 14px;
+   
+   
+
+}
+.taskData p{
+  font-size: 23px;
+  margin-left: 8px;
+  
+   
+}
+.taskData #deleteIcon{
+  position:relative;
+  left: -9%;
+  top: 28px;
+  cursor: pointer;
+  font-size: 21px;
+  color: chartreuse;
 }
